--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.sm</groupId>
-    <artifactId>open-core-parent</artifactId>
+    <artifactId>open-core</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0</version>
 
